Add static book covers and update book schema

--- a/templates/history.html
+++ b/templates/history.html
@@ -2,7 +2,7 @@
 {% block title %}History{% endblock %}
 
 {% block content %}
-
+<div class="header">
 <h2>Your Borrowed Books</h2>
 
 {% if history %}
@@ -26,5 +26,5 @@
 {% else %}
 <p>You have not borrowed any books yet.</p>
 {% endif %}
-
+</div>
 {% endblock %}
